fixed layout bugs

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,7 @@
+body {
+  margin-top: 1em;
+}
+
 .searchbar-wrapper {
   background: red;
   padding: 2em 4em 1em;
